# dottery

./: Cargo.toml  README.md
.github/workflows/: rustfmt.yml
src/: config.rs  logging.rs  main.rs  packages.rs  processing.rs
